Updated feign client