@@ -1,7 +1,7 @@
 package com.naren.career.moviecatalogservice.resource.service;
 
-import com.naren.career.moviecatalogservice.resource.Rating;
-import com.naren.career.moviecatalogservice.resource.UserRating;
+import com.naren.career.moviecatalogservice.resource.bean.Rating;
+import com.naren.career.moviecatalogservice.resource.bean.UserRating;
 import com.netflix.hystrix.contrib.javanica.annotation.HystrixCommand;
 import com.netflix.hystrix.contrib.javanica.annotation.HystrixProperty;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class RatingService {
@@ -23,8 +24,7 @@ public class RatingService {
             threadPoolProperties = {
                     @HystrixProperty(name="coreSize", value = "10"),
                     @HystrixProperty(name="maxQueueSize", value = "20"),
-            }
-    )
+            })
     public UserRating getUserRating(String userId){
         UserRating userRating = restTemplate.getForObject("http://rating-data-service/rating/user/" + userId, UserRating.class);
         System.out.println("userRating is: "+userRating);
@@ -36,7 +36,7 @@ public class RatingService {
         Rating rating = new Rating();
         rating.setRating(10);
         rating.setMovieId(userId);
-        userRating.setUserRating(Arrays.asList(rating));
+        userRating.setUserRating(List.of(rating));
         System.out.println("calling getUserRatingFallBack ");
         return userRating;
     }
